# rass_partner_sdk_new_py

./: README.md  partner_send_api_test.py  pyproject.toml  setup.py  tox.ini
docs/: AddBankAccountParamsBase.md  AddCardPartnerParams.md  AddCardSessionParams.md  AddPaymentMethodResponse.md  AlternateFlow.md  AttachmentResponses.md  AvailablePaymentMethods.md  BaseIdentity.md  CIP.md  CIPData.md  CIPDocument.md  CashLocation.md  CashNetwork.md  CashOperators.md  CashOperatorsParamsBase.md  ContactInfo.md  CorridorDTO.md  CountryAlpha2Code.md  CreateContactRequestParamsPartner.md  DefaultApi.md  ErrorResponse.md  ErrorsCIPProcess.md  EventSystem.md  ExchangeRateDTO.md  FieldErrorsValue.md  FileApi.md  GetRedisStatus200Response.md  GetReferenceCodeResponse.md  GetUserToken400Response.md  GetUserTokenParams.md  IPhoneInfo.md  IPhoneInfoCarrier.md  IgnoredOperationData.md  IgnoredOperationReason.md  IsPhoneAvailableRequest.md  IsPhoneAvailableResponse.md  Language.md  LevelOneParamsRequst.md  LevelStatus.md  LevelStatusDetail.md  (+64 more)
raassdkpy/: __init__.py  api_client.py  configuration.py  rest.py
raassdkpyv2/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_add_bank_account_params_base.py  test_add_card_partner_params.py  test_add_card_session_params.py  test_add_payment_method_response.py  test_alternate_flow.py  test_attachment_responses.py  test_available_payment_methods.py  test_base_identity.py  test_cash_location.py  test_cash_network.py  test_cash_operators.py  test_cash_operators_params_base.py  test_cip.py  test_cip_data.py  (+90 more)
(+203 files in other folders)
